--- a/prografuas/nbproject/private/private.properties
+++ b/prografuas/nbproject/private/private.properties
@@ -1,1 +1,1 @@
-user.properties.file=C:\\Users\\Yoppie\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\LKY-PC\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
